# EAGLE_Lensing

./: AMR2D_PLL.py  GPPA_realistic_sim_images.py  Gal_densitycont.py  Gen_PM_PLL.py  Gen_PM_PLL_AMR.py  Gen_PM_PLL_AMR_test_caustics.py  LensModel  NG_proj_part_hist.py  PG_proj_part_hist.py  PM_NG_lnsmod.py  PM_lensmodel_0.1.py  ParticleGalaxy.py  README.md  Tutorial.ipynb  bird_watcher_env.yaml  create_isocont.py  create_many_lenses.py  create_mass_image.py  create_part_data.py  fnct.py  fnct_pth.py  generate_particle_lens.py  get_gal_indexes.py  get_gal_indexes_tutorial.py  isodens.py  isodens_stat.py  isophote4isodens.py  isophote4isodens_AMR.py  isophote4isodens_alpha.py  kappa_isocontVSlensmodel.py  lib_cosmo.py  likelihood_z_source.py  model_sim_lens.py  mysim_lens.py  particle_galaxy.py  particle_lenses.py  plot_PL.py  plot_one_gal.py  profile_Gen_PM_PLL.py  profiler_Gen_PM_PLL.py  (+35 more)
glamer_scripts/Example_image_orig/: CMakeLists.txt  README.md  example_image.cpp
glamer_scripts/Particle_Example/: CMakeLists.txt  param_example  param_testhalo  testparticles.cpp
glamer_scripts/Prt_Eagle/: CMakeLists.txt  param_example  param_testhalo  particles.cpp  particles_short.cpp
glamer_scripts/Prt_Eagle_small/: CMakeLists.txt  default_CMakeLists.txt  particles_short.cpp  sb_exec_prm.sh  testparticles.cpp  todo
glamer_scripts/Test_Example_image/: CMakeLists.txt  README.md  example_image.cpp
glamer_scripts/revamp_test/: CMakeLists.txt  data  sb_exec.sh  slrmscp_exec_large.sh  slrmscp_exec_large_TestSys.sh
glamer_scripts/test_new/: CMakeLists.txt  particles.cpp
old/: isophote4isodens.py  isophote4isodens_alpha.py  project_gal.py  project_gal_alpha.py
sim_lens_Tuto/RefTuto/snap20_G5.0/tuto_sim_lens/: Gn5SGn0_Npix200_PartAS.pkl
tests/: test_Gen_PM_PLL_AMR.py
